--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 	
-	<link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
-	<link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
-	<link rel="shortcut icon" href="//www.saminniss.com/favicon.ico?">
+	<link rel="shortcut icon" href="static/images/favicon.ico?">
 	
-	<title>Sam Inniss</title>
-	<!-- contains link to bootstrap -->
-	<link rel=stylesheet type=text/css href="static/css/style.css">
+	<!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+    <!-- Optional theme -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
 	
 	<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -21,156 +21,43 @@
     <![endif]-->
 	
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+    <!-- Writting by Sam -->
+    <title>Love Barrel International</title>
+    <link rel=stylesheet type=text/css href="static/css/style.css">
+    
 </head>
-<body>
+<body style="background-image: url('static/images/heart_tree.jpg');">
+    <nav class="navbar navbar-default navbar-fixed-top">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#">Love Barrel International</a>
+        </div>
+        <div id="navbar" class="collapse navbar-collapse">
+          <ul class="nav navbar-nav">
+            <li class="active"><a href="#">HOME</a></li>
+            <li><a href="#about">CONTACT</a></li>
+            <li><a href="#contact">DONATE</a></li>
+          </ul>
+        </div><!--/.nav-collapse -->
+      </div>
+    </nav>
 
-<div class="container-fluid">
-
-	<script>
-		document.body.style.backgroundImage="url('static/city_bg.jpg')"
-	</script>
+  <div class="container-fluid">
+  
 	
+	<h1 style="text-align: center;">LOVE BARREL INTERNATIONAL</h1>	
+	<h3 style="text-align: center">Welcome</h3>
 	
-	<div class = "visible-xs-block" >
-		<h1 style="text-align: center">Sam's Website</h1>	
-		<p style="text-align: center">Welcome</p>
-	</div>
-	
-	<div class="row">
-	  <div class="col-sm-2">
-		<div class='samButton' href="http://samvictor.github.io/md3" style="width: 100%">
-		  <p>MD3</p>
-		</div>
-	  </div>
-	  
-	  <div class="col-sm-2">
-		<div class='samButton' href="#" style="width: 100%">
-		  <p>Blender</p>
-		</div>
-	  </div>
-	  
-	  <div class="col-sm-2">
-		<div class='samButton' href="#" style="width: 100%">
-		  <p>Gimp</p>
-		</div>
-	  </div>
-	  
-	  <div class="col-sm-2">
-		<div class='samButton' href="#" style="width: 100%">
-		  <p>Unity</p>
-		</div>
-	  </div>
-	  
-	  <div class="col-sm-2">
-		<div class='samButton' href="#" style="width: 100%">
-		  <p>Programs</p>
-		</div>
-	  </div>
-	  
-	  <div class="col-sm-2">
-		<div class='samButton' id="info_button" href="#" style="width: 100%" data-toggle="modal" data-target="#info_modal">
-		  <p>Contact Info</p>
-		</div>
-	  </div>
-	</div>
-	
-	<!-- The Modal -->
-	<div id="info_modal" class="modal fade" role="dialog">
-	
-	  <div class="modal-dialog">
-
-		<!-- Modal content-->
-		<div class="modal-content">
-		  <div class="modal-header">
-			<button type="button" class="close" data-dismiss="modal">&times;</button>
-			<h4 class="modal-title">Contact Info</h4>
-		  </div>
-		  <div class="modal-body">
-			<p>Email: sjinniss1@hotmail.com</p>
-		  </div>
-		</div>
-
-	  </div>
-	</div>
-	
-	<div class = "hidden-xs">
-		<h1 style="text-align: center">Sam's Website</h1>	
-		<p style="text-align: center">Welcome</p>
-	</div>
-	
-	
-	<br><br><br><br><br>
-	<div style="border: 1px solid white; padding: 14px; width: 80%; margin: 0 auto">
-		<div id="showcase_carousel" class="carousel slide" data-ride="carousel"
-				style="margin: 0 auto">
-		  <!-- Indicators -->
-		  <ol class="carousel-indicators">
-			<li data-target="#showcase_carousel" data-slide-to="0" class="active"></li>
-			<li data-target="#showcase_carousel" data-slide-to="1"></li>
-			<li data-target="#showcase_carousel" data-slide-to="2"></li>
-			<li data-target="#showcase_carousel" data-slide-to="3"></li>
-			<li data-target="#showcase_carousel" data-slide-to="4"></li>
-			<li data-target="#showcase_carousel" data-slide-to="5"></li>
-		  </ol>
-		
-		  <!-- Wrapper for slides -->
-		  <div class="carousel-inner" role="listbox">
-			<div class="item active">
-			  <img src='static/images/showcase/bar.png' alt="Bar">
-			  <div class="carousel-caption">
-				<t>Bar</t>
-			  </div>
-			</div>
-			
-			<div class="item">
-			  <img src='static/images/showcase/name.png' alt="Name">
-			  <div class="carousel-caption">
-				<t>Say My Name</t>
-			  </div>
-			</div>
-			
-			<div class="item">
-			  <img src='static/images/showcase/haus.png' alt="Haus">
-			  <div class="carousel-caption" >
-				<t>Haus</t>
-			  </div>
-			</div>
-			
-			<div class="item">
-			  <img src='static/images/showcase/room.png' alt="room">
-			  <div class="carousel-caption">
-				<t style="color:#000000">Room</t>
-			  </div>
-			</div>
-			
-			<div class="item">
-			  <img src='static/images/showcase/winter.png' alt="winter">
-			  <div class="carousel-caption">
-				<t>The Capture</t>
-			  </div>
-			</div>
-			
-			<div class="item">
-			  <img src='static/images/showcase/ball.png' alt="ball">
-			  <div class="carousel-caption">
-				<t>Roll a Ball</t>
-			  </div>
-			</div>
-		  </div>
-		
-		  <!-- Controls -->
-		  <a class="left carousel-control" href="#showcase_carousel" role="button" data-slide="prev">
-			<span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-			<span class="sr-only">Previous</span>
-		  </a>
-		  <a class="right carousel-control" href="#showcase_carousel" role="button" data-slide="next">
-			<span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-			<span class="sr-only">Next</span>
-		  </a>
-			</div>
-		<p style="text-align:center; cursor: pointer; background-color: rgba(0,0,0,.6); padding: 1em; margin: 0;" 
-			onClick="PauseClicked(this)" >Pause <span class="glyphicon glyphicon-pause" aria-hidden="true"></span></p>
-		
+	<br><br>
+	<div class="sam_panel hidden fade_in">
+		<img src="static/images/main.png" style="width: 100%;">
 	</div>
 	
 	<br><br><br><br><br><br><br>
@@ -178,11 +65,10 @@
 	<div class = "hidden-xs">
 	
 		<br><br><br><br><br><br><br><br><br>
-	
-	</div>
+    </div>
+  </div>
 
-	<p style="text-align: center;">Still working on this site</p>
-</div>
+
 
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
@@ -191,5 +77,10 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
 
 <script src='static/js/sammy.js'></script>
+<script>
+  $(document).ready(function () {
+    $('div.hidden').fadeIn(3000).removeClass('hidden');
+  });
+</script>
 
 </body>
