--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="#">HOME</a></li>
+            <li class="active"><a href="#">WELCOME</a></li>
             <li><a href="#about">CONTACT</a></li>
             <li><a href="#contact">DONATE</a></li>
           </ul>
@@ -52,7 +52,7 @@
   <div class="container-fluid">
   
 	
-	<h2 style="text-align: center">Welcome</h2>
+	<h1 style="text-align: center">Welcome</h1>
 	
 	<br><br>
 	<div class="sam_panel hidden fade_in">
