removing emman picture

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <link rel=stylesheet type=text/css href="static/css/style.css">
     
 </head>
-<body style="background-image: url('static/images/heart_tree.jpg');">
+<body style="background-image: url('static/images/barrel.jpg');">
     <nav class="navbar navbar-default navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
@@ -52,16 +52,17 @@
   <div class="container-fluid">
   
 	
+	<h1 style="text-align: center">Love Barrel International</h1>
 	<h1 style="text-align: center">Welcome</h1>
 	<div class="sam_panel hidden fade_in">
-		<img src="static/images/main.png" style="width: 100%;">
+		<img src="static/images/heart_tree.jpg" style="width: 100%;">
 	</div>
 	
-	<br><br><br><br><br><br><br>
+	<br><br><br>
 	
 	<div class = "hidden-xs">
 	
-		<br><br><br><br><br><br><br><br><br>
+		<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
     </div>
   </div>
 
